--- a/Spellthrowers/Base.lproj/Main_iPhone.storyboard
+++ b/Spellthrowers/Base.lproj/Main_iPhone.storyboard
@@ -116,7 +116,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="qIm-wM-wJV" kind="modal" id="2EV-Ra-CA9"/>
+                                            <segue destination="qIm-wM-wJV" kind="modal" identifier="card0Clicked" modalTransitionStyle="flipHorizontal" id="2EV-Ra-CA9"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -145,7 +145,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="qIm-wM-wJV" kind="modal" id="tjg-hy-4SB"/>
+                                            <segue destination="qIm-wM-wJV" kind="modal" identifier="card1Clicked" modalTransitionStyle="flipHorizontal" id="tjg-hy-4SB"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -174,7 +174,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="qIm-wM-wJV" kind="modal" id="Zsk-g0-jh9"/>
+                                            <segue destination="qIm-wM-wJV" kind="modal" identifier="card2Clicked" modalTransitionStyle="flipHorizontal" id="Zsk-g0-jh9"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -203,7 +203,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="qIm-wM-wJV" kind="modal" id="G8u-pZ-hph"/>
+                                            <segue destination="qIm-wM-wJV" kind="modal" identifier="card3Clicked" modalTransitionStyle="flipHorizontal" id="G8u-pZ-hph"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -232,7 +232,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="qIm-wM-wJV" kind="modal" id="R3b-RW-hhx"/>
+                                            <segue destination="qIm-wM-wJV" kind="modal" identifier="card4Clicked" modalTransitionStyle="flipHorizontal" id="R3b-RW-hhx"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -306,6 +306,6 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="Tbl-ES-a5F"/>
-        <segue reference="tjg-hy-4SB"/>
+        <segue reference="R3b-RW-hhx"/>
     </inferredMetricsTieBreakers>
 </document>
