--- a/Spellthrowers/Base.lproj/Main_iPhone.storyboard
+++ b/Spellthrowers/Base.lproj/Main_iPhone.storyboard
@@ -104,6 +104,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
+                                            <action selector="card0Touched:" destination="SEj-FN-gUh" eventType="touchUpInside" id="pjY-kW-gc3"/>
                                             <segue destination="qIm-wM-wJV" kind="modal" identifier="card0Clicked" modalTransitionStyle="flipHorizontal" id="2EV-Ra-CA9"/>
                                         </connections>
                                     </button>
@@ -133,6 +134,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
+                                            <action selector="card1Touched:" destination="SEj-FN-gUh" eventType="touchUpInside" id="LDq-sl-JDY"/>
                                             <segue destination="qIm-wM-wJV" kind="modal" identifier="card1Clicked" modalTransitionStyle="flipHorizontal" id="tjg-hy-4SB"/>
                                         </connections>
                                     </button>
@@ -162,6 +164,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
+                                            <action selector="card2Touched:" destination="SEj-FN-gUh" eventType="touchUpInside" id="HfM-vS-fJi"/>
                                             <segue destination="qIm-wM-wJV" kind="modal" identifier="card2Clicked" modalTransitionStyle="flipHorizontal" id="Zsk-g0-jh9"/>
                                         </connections>
                                     </button>
@@ -191,6 +194,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
+                                            <action selector="card3Touched:" destination="SEj-FN-gUh" eventType="touchUpInside" id="Hwh-dq-igl"/>
                                             <segue destination="qIm-wM-wJV" kind="modal" identifier="card3Clicked" modalTransitionStyle="flipHorizontal" id="G8u-pZ-hph"/>
                                         </connections>
                                     </button>
@@ -220,6 +224,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
+                                            <action selector="card4Touched:" destination="SEj-FN-gUh" eventType="touchUpInside" id="MWC-DR-q4y"/>
                                             <segue destination="qIm-wM-wJV" kind="modal" identifier="card4Clicked" modalTransitionStyle="flipHorizontal" id="R3b-RW-hhx"/>
                                         </connections>
                                     </button>
@@ -273,7 +278,7 @@
                                     <segue destination="SEj-FN-gUh" kind="modal" id="Tbl-ES-a5F"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Next turn!" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="DSj-lA-JNI">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Next turn!" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="DSj-lA-JNI">
                                 <rect key="frame" x="20" y="31" width="280" height="181"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
