--- a/Spellthrowers/Base.lproj/Main_iPhone.storyboard
+++ b/Spellthrowers/Base.lproj/Main_iPhone.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <deployment defaultVersion="1808" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <deployment defaultVersion="1792" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--Main Menu-->
+        <!--View Controller - Main Menu-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController title="Main Menu" id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
@@ -59,7 +59,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
-        <!--Game Board-->
+        <!--Game View Controller - Game Board-->
         <scene sceneID="5W9-Th-Sh3">
             <objects>
                 <viewController title="Game Board" id="SEj-FN-gUh" customClass="GameViewController" sceneMemberID="viewController">
@@ -244,7 +244,7 @@
             </objects>
             <point key="canvasLocation" x="909" y="50"/>
         </scene>
-        <!--Transition-->
+        <!--Transition View Controller - Transition-->
         <scene sceneID="l3N-T9-QA6">
             <objects>
                 <viewController title="Transition" id="qIm-wM-wJV" customClass="TransitionViewController" sceneMemberID="viewController">
@@ -301,7 +301,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fTV-Zi-VV2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="899" y="-830"/>
+            <point key="canvasLocation" x="511" y="-756"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
@@ -310,7 +310,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Tbl-ES-a5F"/>
         <segue reference="R3b-RW-hhx"/>
+        <segue reference="Tbl-ES-a5F"/>
     </inferredMetricsTieBreakers>
 </document>
