--- a/Spellthrowers/Base.lproj/Main_iPhone.storyboard
+++ b/Spellthrowers/Base.lproj/Main_iPhone.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <scenes>
-        <!--View Controller - Main Menu-->
+        <!--Main Menu-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController title="Main Menu" id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
@@ -59,7 +58,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
-        <!--Game View Controller - Game Board-->
+        <!--Game Board-->
         <scene sceneID="5W9-Th-Sh3">
             <objects>
                 <viewController title="Game Board" id="SEj-FN-gUh" customClass="GameViewController" sceneMemberID="viewController">
@@ -244,7 +243,7 @@
             </objects>
             <point key="canvasLocation" x="909" y="50"/>
         </scene>
-        <!--Transition View Controller - Transition-->
+        <!--Transition-->
         <scene sceneID="l3N-T9-QA6">
             <objects>
                 <viewController title="Transition" id="qIm-wM-wJV" customClass="TransitionViewController" sceneMemberID="viewController">
@@ -292,7 +291,6 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cYN-h2-gg3">
                                 <rect key="frame" x="77" y="287" width="167" height="38"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Return Home">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
